manifests/overlays/prod/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
<<<<<<< HEAD
<<<<<<< HEAD
  name: "82265627"
=======
  name: cloud-sample 
>>>>>>> 77847b5 (manifest 수정)
=======
  name: "82265627"
>>>>>>> 62da308 (yaml  수정)
  namespace: "82265627"
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: "82265627"
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yml"]
          volumeMounts:
          - mountPath: /mnt/82265627
            name: 82265627-volume
            readOnly: false
            subPath: "82265627"
          - mountPath: /config
            name: application-properties
            readOnly: true
                          
      volumes:
      - name: 82265627-volume
        persistentVolumeClaim:
          claimName: cepg-aa-std-pvc
      - name: application-properties
        configMap:
          name: 82265627-configmap
          items:
            - key: application.yml
              path: application.yml
          defaultMode: 420
